# polynomial

./: .gitignore  CMakeLists.txt  README.md  shell.nix
src/: Expression.cpp  Expression.h  Polynomial.cpp  Polynomial.h  Term.cpp  Term.h  main.cpp
